quitar telefono de medico de captura forzosa

--- a/StareMedic/Views/Viewers/MedicControll.xaml
+++ b/StareMedic/Views/Viewers/MedicControll.xaml
@@ -68,7 +68,7 @@
             RowSpacing="100"
             RowDefinitions="*,*">
 
-            <Label Text="*Telefono:"
+            <Label Text="Telefono:"
                    Grid.Column="0"
                    VerticalOptions="Center"
                    Style="{StaticResource labelEntry}"/>
