--- a/StareMedic/Views/SearchCC.xaml
+++ b/StareMedic/Views/SearchCC.xaml
@@ -78,7 +78,17 @@
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="*" />
                                                 <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="*" />
                                             </Grid.ColumnDefinitions>
+                                        
+                                                    <Label 
+                                                        Text="{Binding Date, StringFormat=' {0} '} "
+                                                        FontFamily="HelveticaNeue"
+                                                        Style="{StaticResource labelEntry}"
+                                                        FontSize="15"
+                                                        TextColor="{StaticResource Black}"
+                                                        HorizontalOptions="Start"
+                                                        Grid.Column="0" />
 
                                                     <Label 
                                                         Text="{Binding PatientName, StringFormat='{0} '}"
@@ -87,7 +97,7 @@
                                                         FontSize="15"
                                                         TextColor="{StaticResource Black}"
                                                         HorizontalOptions="Start"
-                                                        Grid.Column="0" />
+                                                        Grid.Column="1" />
 
                                                     <Label
                                                         Text="{Binding Medic, StringFormat='Medico: {0} '}"
@@ -96,7 +106,7 @@
                                                         Style="{StaticResource labelEntry}"
                                                         TextColor="{StaticResource Black}"
                                                         HorizontalOptions="End"
-                                                        Grid.Column="1" />
+                                                        Grid.Column="2" />
                                     </Grid>
                             </StackLayout>
                             
